@@ -21,7 +21,6 @@
         controller=human
         team_name=north
         user_team_name= _ "teamname^North"
-        fog=yes
     [/side]
     [side]
         [ai]
