@@ -36,6 +36,12 @@ Version 1.3.6+svn:
     * The "Soul Shooter" is now renamed to "Banebow".
     * The players in the selected game in the server lobby are highlighted now.
     * Observers can now chat as a "team" (without disturbing the players).
+    * When use 'map settings' is selected, map settings can no longer be
+      changed, if not defined in the map the general default is chosen.
+    * When cancelling the MP create the changed preferences are no longer
+      saved.
+    * When the MP create is accepted with 'use map settings' the map setting
+      parameters are no longer stored as the new preference.
 
   * Sounds and music
     * New or improved sounds: bat hit.
