@@ -14,6 +14,8 @@
 
 #include "global.hpp"
 
+#include "settings.hpp"
+
 #include "serialization/string_utils.hpp"
 #include "util.hpp"
 
